# gwPackage

./: README.md  pyproject.toml
src/gwPackage/: __init__.py  _init_.py  core.py
src/gwPackage/gw_assoc/: cli.py
src/gwPackage/gw_assoc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gwPackage/gw_assoc/analysis/: odds.py  spatial.py  temporal.py
src/gwPackage/gw_assoc/io/: skymap.py  transient.py
src/gwPackage/gw_assoc/plotting/: skymap.py
src/gw_assoc/: __init__.py  association.py
src/gw_assoc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gw_assoc/analysis/: __init__.py  los.py
src/gw_assoc/io/: __init__.py  skymap.py
src/gw_assoc/plotting/: skymap.py
tests/: test_basic.py
