[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gwpackage"
version = "0.0.1"
description = "GW volume localization + transient association utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CMU"}
authors = [{name = "Kaitlyn Pak", email = "kpak2@andrew.cmu.edu"}]
keywords = []
dependencies = []

[project.urls]
Homepage = "https://github.com/kaitlynjpak/gwPackage"
Issues = "https://github.com/kaitlynjpak/gwPackage/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["src/gwPackage"]